--- a/src/components/Lyrics.css
+++ b/src/components/Lyrics.css
@@ -1,3 +1,29 @@
 .lyricsWrapper {
     margin-left: 5rem;
 }
+
+.lyricsdisplay {
+    overflow-y: scroll;
+    height: 400px;
+    /* background-color: black; */
+    scrollbar-width: thin;
+    /* overflow: hidden; */
+    mask-image: linear-gradient(to bottom, transparent 0%, black 48px, black calc(100% - 48px), transparent 100%);
+}
+
+/* .lyricsdisplay::after {
+    content: "catsdsaf";
+    position: absolute;
+    z-index: 2;
+    bottom: -11;
+    left:0;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255, 1) 90%);
+    width: 100%;
+    height: 10rem;
+} */
+
+.lyricsdisplay::-webkit-scrollbar{
+    /* display:none; */
+    scrollbar-width: thin;
+}
