Functioning Version of the App with clickable Lyrics support.

--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,11 @@
   justify-content: space-evenly;
   /* background-color: black; */
 }
+
+.controls{
+  margin-top: 2rem;
+}
+
+.globalSeek{
+  margin-top: 1rem;
+}
