--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #fdc873;
 }
 
 body {
@@ -29,6 +29,9 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+
 }
 
 h1 {
@@ -48,7 +51,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #fdc873;
 }
 button:focus,
 button:focus-visible {
@@ -57,11 +60,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: whitesmoke;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #fdc873;
   }
   button {
     background-color: #f9f9f9;
