--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,16 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  
 }
 
 .tracks {
   display: flex;
-  justify-content: center;
 }
 
 .singleTrack {
@@ -17,7 +21,8 @@
 
 .audio-mixer {
   width: 100%;
-  display: flex
+  display: flex;  
+  flex-wrap: wrap;
 }
 .globalSeek input {
   width: 100%
@@ -25,7 +30,7 @@
 }
 
 .controls-wrapper {
-  width: 100%
+  width: 100%;
 }
 .tracks{
   display: flex;
@@ -41,4 +46,16 @@
 
 .globalSeek{
   margin-top: 1rem;
+}
+
+.appWrapper {
+  background-color: rgba(245, 40, 145, 0.3);
+  border-radius: 50px;
+  padding: 5rem;
+
+}
+
+.selectBox {
+  margin-top: 1rem;
+  margin-bottom: 0rem;
 }
