--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 }
 
 .tracks {
@@ -15,8 +15,8 @@
 }
 
 .singleTrack {
-  margin-right: 1rem;
-  margin-left: 1rem;
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
 }
 
 .audio-mixer {
@@ -49,6 +49,8 @@
 }
 
 .appWrapper {
+  width: 100%;
+  height: auto;
   background-color: rgba(245, 40, 145, 0.3);
   border-radius: 50px;
   padding: 5rem;
