--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh; 
-  background-color: #4158D0;
+  background-color: #593263;
   background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
 }
