--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  /* background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%); */
   background-repeat: no-repeat;
   
 }
@@ -59,11 +59,20 @@
   height: auto;
   background-color: rgba(245, 40, 145, 0.3);
   border-radius: 50px;
-  padding: 5rem;
-
+  /* Padding in element styling for responsiveness */
 }
 
-.selectBox {
-  margin-top: 1rem;
-  margin-bottom: 0rem;
+.selectBoxWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  /* margin-top: 1rem; */
+  margin-bottom: 1rem;
+  color: "black";
+}
+
+.selectBox p {
+font-weight: bold;
+font-size: large;
+margin-bottom: 0;
 }
