Added basic firebase login page, user context  and redirect if not logged in.

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,30 @@ font-weight: bold;
 font-size: large;
 margin-bottom: 0;
 }
+
+.glass {
+  background: rgba(255, 255, 255, 0.52);
+  border-radius: 3px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.7px);
+  -webkit-backdrop-filter: blur(2.7px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.glassCard {
+  background: rgba(202, 159, 91, 0.1);
+  border-radius: 3px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.7px);
+  -webkit-backdrop-filter: blur(2.7px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.glasstransparent {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 3px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.7px);
+  -webkit-backdrop-filter: blur(2.7px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
