Added a player page with working search params for shareable song urls. Added glass design to player.

--- a/src/components/Lyrics.css
+++ b/src/components/Lyrics.css
@@ -1,17 +1,16 @@
 .lyricsWrapper {
-    margin-left: 5rem;
+    margin-top: 0rem;
+    padding-top: 1rem;
+    overflow: hidden;
 }
 
 .lyricsdisplay {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    overflow: hidden;
     height: 430px;
     /* background-color: black; */
-    scrollbar-width: thin;
+    /* scrollbar-width: thin; */
     /* overflow: hidden; */
     mask-image: linear-gradient(to top, transparent 0%, black 10px, black calc(100% - 10px), transparent 100%);
 }
 
-.lyricsdisplay::-webkit-scrollbar{
-    /* display:none; */
-    scrollbar-width: thin;
-}
