--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 1rem;
+  /* min-width: 496px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  /* height: 100%; */
   /* background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%); */
   background-repeat: no-repeat;
+  background-size: cover;
   
 }
 
@@ -57,7 +60,7 @@
 .appWrapper {
   width: 100%;
   height: auto;
-  background-color: rgba(245, 40, 145, 0.3);
+  /* background-color: rgba(245, 40, 145, 0.3); */
   border-radius: 50px;
   /* Padding in element styling for responsiveness */
 }
