--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body {
 
 @media only screen and (min-width: 600px) {
   body {
-    height: 100vh;
+    min-height: 100vh;
   }
   #root {
     background-image: none;
