--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,3 +15,11 @@
     justify-content: center;
   }
   
+  .glasstransparent {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 3px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.7px);
+    -webkit-backdrop-filter: blur(2.7px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
