--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  /* height: 100vh; */
   /* min-width: 496px; */
   /* height: 100vh; */
   /* width: 100vw; */
