WIP trying to fix scroll into view on mobile. Made Navbar on mobile smaller.

--- a/src/components/Lyrics.css
+++ b/src/components/Lyrics.css
@@ -14,3 +14,11 @@
     mask-image: linear-gradient(to top, transparent 0%, black 10px, black calc(100% - 10px), transparent 100%);
 }
 
+.glass {
+    background: rgba(255, 255, 255, 0.52);
+    border-radius: 3px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.7px);
+    -webkit-backdrop-filter: blur(2.7px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
